udate html and css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,3 +7,13 @@
     opacity: .5;
 
 }
+
+#button-1 { 
+    background-color: black;
+    margin-top: 450px;
+  
+}
+#button-2 {
+    background-color: black;
+    margin-top: 450px;
+}
