--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,14 +3,26 @@ body {
     background-size: cover;
     
 }
-.hero {
-    height: 100%;
-}
-button {
-    width: 100px;
-    border-radius: rounded;
-} 
 #page-quote{
     font-family: Georgia, serif;
     color: white;
+}
+.header {
+    background-color: white;
+    height: 50px;
+    text-align: center;
+    padding-top: 25px;
+    font-size: large;
+    font-weight: bolder;
+    opacity: .5;
+
+}
+#button-1 { 
+    background-color: black;
+    margin-top: 450px;
+  
+}
+#button-2 {
+    background-color: black;
+    margin-top: 450px;
 }
