--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,17 @@
 body {
     height: 100vh;
     background-size: cover;
-    
+    background-position: center center;
+    background-repeat: no-repeat;
 }
 #page-quote{
     font-family: Georgia, serif;
     color: white;
+    background-color: rgb(0,0,0,0.6);
+    border-radius: 5%;
+    font-size: large;
+    line-height: 2;
+    padding: 20px;
 }
 .header {
     background-color: white;
