responsive-img css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 body {
     height: 100vh;
     background-size: cover;
-    
+    align-items: center;
 }
 #page-quote{
     font-family: Georgia, serif;
@@ -19,10 +19,15 @@ body {
 }
 #button-1 { 
     background-color: black;
-    margin-top: 450px;
-  
+    margin-top: 800px;
+    
 }
 #button-2 {
     background-color: black;
-    margin-top: 450px;
+    margin-top: 800px;
+    
+}
+.responsive {
+    width: 100%;
+    height: auto;
 }
