--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,12 +32,10 @@ body {
     background-color: black;
     margin-top: 450px;
 }
-.history-quote{
-    font-family: Georgia, serif;
-    color: white;
-    background-color: rgb(0,0,0,0.6);
-    border-radius: 5%;
-    font-size: large;
-    line-height: 2;
-    padding: 20px;
+img {
+    display:block;
+    max-width: 50%;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
