--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,19 @@ img {
     margin-left: auto;
     margin-right: auto;
 }
-.responsive {
-    width: 100%;
-    height: auto;
+.responsive-img {
+    margin-top: 50px;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+   
+}
+.header-2 {
+    background-color: white;
+    height: 50px;
+    text-align: center;
+    padding-top: 25px;
+    font-size: 25px;
+    font-weight: bolder;
+    font-family: Arial, Helvetica, sans-serif;
 }
