--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,58 +1,89 @@
 body {
-    height: 100vh;
-    background-size: cover;
-    align-items: center;
+  margin: 0;
+  padding: 0;
 }
-#page-quote{
-    font-family: Georgia, serif;
-    color: white;
-    background-color: rgb(0,0,0,0.6);
-    border-radius: 5%;
-    font-size: large;
-    line-height: 2;
-    padding: 20px;
+#space-img {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  max-width: 100%;
+  background-size: cover;
+  background-position: center center;
+}
+#page-quote {
+  position: absolute;
+  font-family: Georgia, serif;
+  color: white;
+  background-color: rgb(0, 0, 0, 0.6);
+  border-radius: 5%;
+  font-size: 20px;
+  line-height: 2.5;
+  padding: 30px;
 }
 .header {
-    background-color: white;
-    height: 50px;
-    text-align: center;
-    padding-top: 25px;
-    font-size: large;
-    font-weight: bolder;
-    opacity: .5;
-
+  background-color: white;
+  height: 20px;
+  text-align: center;
+  padding: 50px;
+  font-size: 30px;
+  font-weight: bolder;
+  opacity: 0.25;
 }
-#button-1 { 
-    background-color: black;
-    margin-top: 700px;
-    
-    
+#button-1 {
+  background-color: black;
 }
 #button-2 {
-    background-color: black;
-    margin-top: 700px;
-    
-}
-img {
-    display:block;
-    max-width: 50%;
-    height: auto;
-    margin-left: auto;
-    margin-right: auto;
-}
-.responsive-img {
-    margin-top: 50px;
-    font-size: 20px;
-    font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
-   
+  background-color: black;
 }
 .header-2 {
-    background-color: white;
-    height: 50px;
-    text-align: center;
-    padding-top: 25px;
-    font-size: 25px;
-    font-weight: bolder;
-    font-family: Arial, Helvetica, sans-serif;
+  background-color: white;
+  height: 50px;
+  text-align: center;
+  padding: 50px;
+  font-size: 30px;
+  font-weight: bolder;
+  font-family: Arial, Helvetica, sans-serif;
+}
+p {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  line-height: 1.5;
+}
+#welcome-screen {
+  height: 100vh;
+  width: 100vw;
+  background-image: url(./andromeda-apod.png);
+  max-width: 100%;
+  background-size: cover;
+  background-position: center center;
+}
+h2,
+h3 {
+  padding: 30px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  color: white;
+  line-height: 1.5;
+  font-size: 35px;
+}
+#space-text {
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 10px;
+  font-size: 170px;
+  background-color: black;
+  font-weight: 900;
+  color: white;
+  mix-blend-mode: darken;
+  border-radius: 2%;
+}
+.p-2 {
+  text-align: center;
+  font-weight: bold;
+  color: white;
+  font-size: 20px;
+}
+.p-3 {
+  color: rgb(255, 255, 255, 0.7);
+  position: absolute;
+  bottom: 1px;
 }
