--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+html,
 body {
   margin: 0;
   padding: 0;
@@ -76,6 +77,7 @@ h3 {
   color: white;
   mix-blend-mode: darken;
   border-radius: 2%;
+  
 }
 .p-2 {
   text-align: center;
